Add project status page to frontend with Dalvik VM progress and architecture overview
New /status page showing:
- Milestone banner (Android apps run transparently on OHOS)
- Architecture status cards (x86_64, aarch64, ARM32 all running)
- Key metrics (1,968 shims, 2,422 classes, 4,617 API types, 50+ VM fixes)
- Dalvik VM capabilities checklist
- Android app transparency details with sample output
- Shim layer compilation stats and pipeline
- Architecture diagram
- Next steps roadmap

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>